Fixe #38. Added background clipping

--- a/statics/home.css
+++ b/statics/home.css
@@ -232,6 +232,7 @@ img#avatar {
     background: linear-gradient(45deg, #bc4e9c, #f80759);
     color: transparent;
     background-clip: text;
+    -moz-background-clip: text;
     }
 }
 
